--- a/.github/workflows/save.yml
+++ b/.github/workflows/save.yml
@@ -57,10 +57,10 @@ jobs:
           if [[ $currentmd5 != $previousmd5 ]]; then echo "keihin00169/$savepath" >> "images/24h.txt"; fi
           if [[ $currentmd5 != $previousmd5 ]]; then echo "keihin00169/$savepath" >> "images/${year}/${month}/${date}/images.txt"; fi
           if [[ $currentmd5 == $previousmd5 ]]; then rm $savepath ; fi
-          aws s3 cp $savepath "s3://liver-camera/${reponame}/${savepath}"
-          aws s3 cp latest.jpg "s3://liver-camera/${reponame}/latest.jpg"
-          aws s3 cp images/24h.txt "s3://liver-camera/${reponame}/images/24h.txt"
-          aws s3 cp images/${year}/${month}/${date}/images.txt "s3://liver-camera/${reponame}/images/${year}/${month}/${date}/images.txt"
+          aws s3 cp --region ap-northeast-1 $savepath "s3://liver-camera/${reponame}/${savepath}"
+          aws s3 cp --region ap-northeast-1 latest.jpg "s3://liver-camera/${reponame}/latest.jpg"
+          aws s3 cp --region ap-northeast-1 images/24h.txt "s3://liver-camera/${reponame}/images/24h.txt"
+          aws s3 cp --region ap-northeast-1 images/${year}/${month}/${date}/images.txt "s3://liver-camera/${reponame}/images/${year}/${month}/${date}/images.txt"
           find ./ | grep -E "[0-9]+.jpg" | xargs rm -f
           git config --local user.email "info@laboneko.jp"
           git config --local user.name "labeneko"
